# Listik

./: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
components/: AppSidebar.tsx  FloatingDock.tsx  Omnibar.tsx  SearchOverlay.tsx  SectionPlaceholder.tsx  SettingsMenu.tsx  ShortcutHelper.tsx  SmartTaskInput.tsx  ThemeSetting.tsx  ThemeToggle.tsx  TitleBar.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx  ToggleSwitch.tsx  WeeklyPlanner.tsx  date-picker-button.tsx  date-picker-calendar.tsx  ui-prefs.tsx
docs/: APPRENTISSAGE.md  DESIGN-SYSTEM.md  ROADMAP-THINGS.md  ROADMAP.md
hooks/: useNotes.ts  usePlannerTodos.ts  useProjects.ts  useSettings.ts  useTags.ts  useTodos.ts  useWindowActions.ts
lib/: GlobalShortcutManager.ts  date.test.ts  date.ts  motion.ts  swr-config.ts  time.test.ts  time.ts  use-roving-radio.ts
sidecar/: .env.example  main.py  vecstore.py  (+1 more)
src-tauri/: Cargo.toml  build_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_add_list.sql  0003_add_recurrence.sql  0004_add_reminders.sql  0005_settings.sql  0006_notes.sql  0007_vector_sync.sql  0008_subtasks.sql  0009_relational.sql  0010_todo_relations.sql  0011_todo_area.sql  0012_decouple_deadline.sql  0013_recurrence_modifiers.sql
src-tauri/src/: commands.rs  db.rs  main.rs  reminders.rs  sidecar.rs  vectorizer.rs
src-tauri/src/models/: ai.rs  area.rs  mod.rs  note.rs  project.rs  serde.rs  settings.rs  subtask.rs  tag.rs  task.rs
(+108 files in other folders)
